--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                   </div>
                   <div class="col-md-5">
                      <ul class="infomaco">
-                        <!-- <li><i class="fa fa-phone" aria-hidden="true"></i> 074 133 1234</li> -->
-                        <!-- <li><a href="Javascript:void(0)"><i class="fa fa-envelope-o" aria-hidden="true"></i> bettermaxtechnology@gmail.com</a></li> -->
-						<li> <a href="https://bettermaxtechnology.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
+                        <!-- <li><i class="fa fa-phone" aria-hidden="true"></i> 0717898761</li> -->
+                        <!-- <li><a href="Javascript:void(0)"><i class="fa fa-envelope-o" aria-hidden="true"></i> ezvinet@gmail.com</a></li> -->
+						<li> <a href="https://ezvinet.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
 
 <li><a href="tel:+94717898761"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
 <li><a href="share.html"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-share" ></i></button></a></li>
@@ -268,7 +268,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				  <li>
-				  <a href="https://bettermaxtechnology.github.io/Budurasmala/">
+				  <a href="https://ezvinet.github.io/Budurasmala/">
                      <figure><img src="pro1.jpg" alt="#"/></figure>
 					 </a>
                      <div class="pro_text">
@@ -280,7 +280,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				  <li>
-				  <a href="https://bettermaxtechnology.github.io/smartSwitch/">
+				  <a href="https://ezvinet.github.io/smartSwitch/">
                      <figure><img src="pro2.jpg" alt="#"/></figure>
 					 </a>
                      <div class="pro_text">
@@ -292,7 +292,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				  <li>
-				  <a href="https://bettermaxtechnology.github.io/Hikvision/">
+				  <a href="https://ezvinet.github.io/Hikvision/">
                      <figure><img src="pro4.png" alt="#"/></figure>
                      <div class="pro_text">
                         <h3>Cctv</h3>
@@ -556,7 +556,7 @@
                <div class="col-md-6">
                   <div class="blog-box">
 				  				  				  				<li>
-				  <a href="https://bettermaxtechnology.github.io/myGallery/"> 
+				  <a href="https://ezvinet.github.io/Gallery/"> 
 				  
                      <figure>
                         <img src="blog1.jpg" alt="#"/>  
@@ -578,10 +578,10 @@
                <div class="col-md-6">
                   <div class="blog-box">
 				  				  				  			 <li>
-				  <a href="https://bettermaxtechnology.github.io/myGallery/"> 
+				  <a href="https://ezvinet.github.io/Gallery2/"> 
 				  
                      <figure>
-                        <img src="blog2.jpg" alt="#"/>  
+                        <img src="G1.jpg" alt="#"/>  
                         <div class="date">
                            <h3>07-20-2022</h3>
                         </div>
