--- a/share.html
+++ b/share.html
@@ -55,7 +55,7 @@
                   </div>
                   <div class="col-md-5">
                      <ul class="infomaco">
-                        <li> <a href="https://bettermaxtechnology.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
+                        <li> <a href="https://ezvinet.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
 
 <li><a href="tel:+94717898761"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
 <li><a href="share.html"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-share" ></i></button></a></li>
@@ -159,28 +159,28 @@ document.querySelectorAll(".copy-link").forEach((copyLinkParent) => {
             <div class="row">
                <div class="col-md-4 col-sm-6 ">
                   <div class="service-box text_align_center">
-                     <a  class="links" href="https://api.whatsapp.com/send?phone=&text=<Electrical,Cctv and Network> https://bettermaxtechnology.github.io/Home "     data-action="share/whatsapp/share"  
+                     <a  class="links" href="https://api.whatsapp.com/send?phone=&text=<Electrical,Cctv and Network> https://ezvinet.github.io/Home/ "     data-action="share/whatsapp/share"  
         target="_blank"><img src="WhatsApp.png"alt="#" /></a >
                      <h3>WhatsApp</h3>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6 ">
                   <div class="service-box text_align_center">
-                     <a  class="links" href="https://t.me/share/url?url=https://bettermaxtechnology.github.io/Home &text=<Electrical,Cctv and Network> http://bettermax.ga "     data-action="share/t.me/share"  
+                     <a  class="links" href="https://t.me/share/url?url=https://ezvinet.github.io/Home/ &text=<Electrical,Cctv and Network> http://bettermax.ga "     data-action="share/t.me/share"  
         target="_blank"><img src="Telegram.png"alt="#" /></a >
                      <h3>Telegram<h3>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6 ">
                   <div class="service-box text_align_center">
-                      <a  class="links" href="https://www.facebook.com/share.php u= https://bettermaxtechnology.github.io/Home  "       
+                      <a  class="links" href="https://www.facebook.com/share.php u= https://ezvinet.github.io/Home/  "       
         target="_blank"><img src="Facebook.webp"alt="#" /></a >
                     <h3>Facebook<h3>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6 ">
                   <div class="service-box text_align_center">
-                      <a  class="links" href="https://twitter.com/share?text=<Electrical,Cctv and Network&url= http://bettermax.ga "     data-action="share/twitter/share"  
+                      <a  class="links" href="https://twitter.com/share?text=<Electrical,Cctv and Network&url= https://ezvinet.github.io/Home/ "     data-action="share/twitter/share"  
         target="_blank"><img src="Twitter.png"alt="#" /></a >
                      <h3>Twitter</h3>
                      <!-- <p>Deta, Network, WiFi Access</p> -->
