--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="col-md-5">
                      <ul class="infomaco">
-                        <li> <a href="https://bettermaxtechnology.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
+                        <li> <a href="https://ezvinet.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
 
 <li><a href="tel:+94717898761"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
 <li><a href="share.html"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-share" ></i></button></a></li>
@@ -154,7 +154,7 @@
                         <h3>About Company</h3>
                         <p>We are a government registered company with many years of service experience.<br><br>The maximum warranty period is ours only</p>
                         <ul class="social_icon">
-                           <li><a href="https://www.facebook.com/madushanelectricals"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                           <li><a href="https://www.facebook.com/profile.php?id=100094234156644"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                            <li><a href="http://wa.me/+94077898761?text=Thank____you____very_much_for____contacting_us"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
                            <li><a href="http://t.me/MadushanUdayanga"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
