--- a/සිංහල.html
+++ b/සිංහල.html
@@ -11,7 +11,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>බෙට්ටෙර්  මැක්ස්  ටෙච්නොලජි</title>
+      <title>ඉසීවිනෙට්  ටෙච්නොලජි</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -53,9 +53,9 @@
                   <div class="col-md-5">
                      <ul class="infomaco">
                         
-                        <li> <a href="https://bettermaxtechnology.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
+                        <li> <a href="https://ezvinet.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
 
-<li><a href="tel:+94741331234"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
+<li><a href="tel:+94717898761"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
 <li><a href="share.html"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-share" ></i></button></a></li>
                      </ul>
                   </div>
@@ -227,7 +227,7 @@
                      </p>
 					 <p>
                           
-                                   ඔබේ නිවසේ හෝ ව්‍යාපාරයේ විදුලි පද්ධතියේ ආරක්ෂාව සහ ආරක්ෂාව සඳහා බෙට්ටෙර්  මැක්ස්  ටෙච්නොලජි
+                                   ඔබේ නිවසේ හෝ ව්‍යාපාරයේ විදුලි පද්ධතියේ ආරක්ෂාව සහ ආරක්ෂාව සඳහා ඉසීවිනෙට්  ටෙච්නොලජි
 
                      </p>
                      <p>
