--- a/සිංහල.html
+++ b/සිංහල.html
@@ -264,7 +264,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				  <li>
-				  <a href="https://bettermaxtechnology.github.io/Budurasmala/">
+				  <a href="https://ezvinet.github.io/Budurasmala/">
                      <figure><img src="pro1.jpg" alt="#"/></figure>
 					 </a>
                      <div class="pro_text">
@@ -276,7 +276,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				  <li>
-				  <a href="https://bettermaxtechnology.github.io/smartSwitch/">
+				  <a href="https://ezvinet.github.io/smartSwitch/">
                      <figure><img src="pro2.jpg" alt="#"/></figure>
 					 </a>
                      <div class="pro_text">
@@ -288,7 +288,7 @@
                <div class="col-md-4">
                   <div class="product-box">
 				   <li>
-				  <a href="https://bettermaxtechnology.github.io/Hikvision/">
+				  <a href="https://ezvinet.github.io/Hikvision/">
                      <figure><img src="pro4.png" alt="#"/></figure>
 					 </a>
                      <div class="pro_text">
@@ -555,7 +555,7 @@
                <div class="col-md-6">
                   <div class="blog-box">
 				  				  <li>
-				  <a href="https://bettermaxtechnology.github.io/myGallery/">
+				  <a href="https://ezvinet.github.io/Gallery/">
                      <figure>
                         <img src="blog1.jpg" alt="#"/>  
                         <div class="date">
@@ -574,9 +574,9 @@
                <div class="col-md-6">
                   <div class="blog-box">
 				  				  				  <li>
-				  <a href="https://bettermaxtechnology.github.io/myGallery/">
+				  <a href="https://ezvinet.github.io/Gallery/">
                      <figure>
-                        <img src="blog2.jpg" alt="#"/>  
+                        <img src="G2.jpg" alt="#"/>  
                         <div class="date">
                            <h3>07-01-2022</h3>
                         </div>
@@ -604,9 +604,9 @@
                         <h3>සමාගම ගැන</h3>
                         <p>අපි වසර ගණනාවක සේවා පළපුරුද්ද සහිත රජයේ ලියාපදිංචි සමාගමකි.<br><br>උපරිම වගකීම් කාලය අපගේ පමණි </p>
                         <ul class="social_icon">
-                           <li><a href="https://www.facebook.com/madushanelectricals"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                           <li><a href="https://www.facebook.com/profile.php?id=100094234156644"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                           <li><a href="http://wa.me/+940741331234?text=Thank____you____very_much_for____contacting_us"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                           <li><a href="http://wa.me/+940717898761?text=Thank____you____very_much_for____contacting_us"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
                             <li><a href="http://t.me/MadushanUdayanga"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
                         </ul>
                      </div>
@@ -638,8 +638,8 @@
                         <ul class="conta">
                            <li><i class="fa fa-map-marker" aria-hidden="true"></i> ස්ථානය
                            </li>
-                           <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>0741331234</li>
-                           <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> bettermaxtechnology@gmail.com</a></li>
+                           <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>0717898761</li>
+                           <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> ezvinet@gmail.com</a></li>
                         </ul>
                         <form class="form_subscri">
                            <div class="row">
@@ -663,7 +663,7 @@
                   <div class="row">
                      <div class="col-md-12">
 					 
-                        <p>අපගේ යුටියිබි චැනලය<a href="https://www.youtube.com/channel/UCQcc4UHaLNr54sM8kNRspmA"> Better Xax Technology</a></p>
+                        <p>අපගේ යුටියිබි චැනලය<a href="https://www.youtube.com/channel/UCQcc4UHaLNr54sM8kNRspmA">ඉසීවිනෙට්  ටෙච්නොලජි </a></p>
                      </div>
                   </div>
                </div>
