--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="col-md-5">
                      <ul class="infomaco">
-                        <li> <a href="https://bettermaxtechnology.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
+                        <li> <a href="https://ezvinet.github.io/Home/"target="_blank"><button type="button" class="copy-link-buttonbutton">  Desktop Mode</button></a></li>
 
 <li><a href="tel:+94717898761"target="_blank"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-phone" ></i></button></a></li>
 <li><a href="share.html"><button type="button" class="copy-link-buttonbuttonbutton"><i class="fa fa-share" ></i></button></a></li>
