--- a/share.html
+++ b/share.html
@@ -203,7 +203,7 @@ document.querySelectorAll(".copy-link").forEach((copyLinkParent) => {
                         <h3>About Company</h3>
                         <p>We are a government registered company with many years of service experience.<br><br>The maximum warranty period is ours only </p>
                         <ul class="social_icon">
-                           <li><a href="https://www.facebook.com/madushanelectricals"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                           <li><a href="https://www.facebook.com/profile.php?id=100094234156644"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                            <li><a href="http://wa.me/+940717898761?text=Thank____you____very_much_for____contacting_us"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
                             <li><a href="http://t.me/MadushanUdayanga"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
